[gd_scene load_steps=6 format=3 uid="uid://b8hl7xp14ckok"]

[ext_resource type="Script" uid="uid://wvkrsm23xuko" path="res://scenes/combatUI/charactersUIComponent/character_status_ui.gd" id="1_4pr60"]
[ext_resource type="Texture2D" uid="uid://d15331ku4qh1a" path="res://assets/menu/button/turn_indicator.png" id="2_n8rie"]
[ext_resource type="Texture2D" uid="uid://c1q8av283dpmm" path="res://assets/menu/bars/GREEN.png" id="3_stso1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_stso1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_x5ydk"]
texture = ExtResource("3_stso1")

[node name="CharacterStatusUI" type="Control"]
layout_mode = 3
anchor_right = 0.09
anchor_bottom = 0.148
offset_right = 0.319992
offset_bottom = 0.0960007
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
mouse_filter = 2
script = ExtResource("1_4pr60")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -69.0
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TurnIndicator" type="TextureRect" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
texture = ExtResource("2_n8rie")
expand_mode = 1
stretch_mode = 5

[node name="NameLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Default"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
mouse_filter = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_stso1")

[node name="HealthBar" type="ProgressBar" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 2
mouse_filter = 2
theme_override_styles/fill = SubResource("StyleBoxTexture_x5ydk")
show_percentage = false

[node name="HealthLabel" type="Label" parent="VBoxContainer/HealthBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.1667
offset_right = 20.0
offset_bottom = 11.1667
grow_horizontal = 2
grow_vertical = 2

[node name="StatusEffect" type="Control" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
